Speaker spacing fix

--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ ul.schedule {
 
 .speaker ul {
 	list-style-type: none;
-	margin: 0 15%;
+	margin: 0 5%;
 	padding: 0;
 	text-align: left;
 }
